; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/reiserfs/src/nls/extr_nls_base.c_utf8_wctomb.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/reiserfs/src/nls/extr_nls_base.c_utf8_wctomb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.utf8_table = type { i64, i32, i64, i64 }

@utf8_table = common dso_local global %struct.utf8_table* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @utf8_wctomb(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.utf8_table*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %75

15:                                               ; preds = %3
  %16 = load i64, i64* %6, align 8
  store i64 %16, i64* %8, align 8
  store i32 0, i32* %10, align 4
  %17 = load %struct.utf8_table*, %struct.utf8_table** @utf8_table, align 8
  store %struct.utf8_table* %17, %struct.utf8_table** %11, align 8
  br label %18

18:                                               ; preds = %69, %15
  %19 = load %struct.utf8_table*, %struct.utf8_table** %11, align 8
  %20 = getelementptr inbounds %struct.utf8_table, %struct.utf8_table* %19, i32 0, i32 3
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  br label %26

26:                                               ; preds = %23, %18
  %27 = phi i1 [ false, %18 ], [ %25, %23 ]
  br i1 %27, label %28, label %74

28:                                               ; preds = %26
  %29 = load i32, i32* %10, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %10, align 4
  %31 = load i64, i64* %8, align 8
  %32 = load %struct.utf8_table*, %struct.utf8_table** %11, align 8
  %33 = getelementptr inbounds %struct.utf8_table, %struct.utf8_table* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = icmp sle i64 %31, %34
  br i1 %35, label %36, label %68

36:                                               ; preds = %28
  %37 = load %struct.utf8_table*, %struct.utf8_table** %11, align 8
  %38 = getelementptr inbounds %struct.utf8_table, %struct.utf8_table* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 8
  store i32 %39, i32* %9, align 4
  %40 = load %struct.utf8_table*, %struct.utf8_table** %11, align 8
  %41 = getelementptr inbounds %struct.utf8_table, %struct.utf8_table* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* %8, align 8
  %44 = load i32, i32* %9, align 4
  %45 = zext i32 %44 to i64
  %46 = ashr i64 %43, %45
  %47 = or i64 %42, %46
  %48 = trunc i64 %47 to i32
  %49 = load i32*, i32** %5, align 8
  store i32 %48, i32* %49, align 4
  br label %50

50:                                               ; preds = %53, %36
  %51 = load i32, i32* %9, align 4
  %52 = icmp sgt i32 %51, 0
  br i1 %52, label %53, label %66

53:                                               ; preds = %50
  %54 = load i32, i32* %9, align 4
  %55 = sub nsw i32 %54, 6
  store i32 %55, i32* %9, align 4
  %56 = load i32*, i32** %5, align 8
  %57 = getelementptr inbounds i32, i32* %56, i32 1
  store i32* %57, i32** %5, align 8
  %58 = load i64, i64* %8, align 8
  %59 = load i32, i32* %9, align 4
  %60 = zext i32 %59 to i64
  %61 = ashr i64 %58, %60
  %62 = and i64 %61, 63
  %63 = trunc i64 %62 to i32
  %64 = or i32 128, %63
  %65 = load i32*, i32** %5, align 8
  store i32 %64, i32* %65, align 4
  br label %50

66:                                               ; preds = %50
  %67 = load i32, i32* %10, align 4
  store i32 %67, i32* %4, align 4
  br label %75

68:                                               ; preds = %28
  br label %69

69:                                               ; preds = %68
  %70 = load %struct.utf8_table*, %struct.utf8_table** %11, align 8
  %71 = getelementptr inbounds %struct.utf8_table, %struct.utf8_table* %70, i32 1
  store %struct.utf8_table* %71, %struct.utf8_table** %11, align 8
  %72 = load i32, i32* %7, align 4
  %73 = add nsw i32 %72, -1
  store i32 %73, i32* %7, align 4
  br label %18

74:                                               ; preds = %26
  store i32 -1, i32* %4, align 4
  br label %75

75:                                               ; preds = %74, %66, %14
  %76 = load i32, i32* %4, align 4
  ret i32 %76
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
